attached_assets/Pasted-t85491005-penguin-prism-lang-make-gcc-Wall-Wextra-std-c_1776337215315.txt
t85491005@penguin:~/prism-lang$ make             
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/main.o src/main.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/lexer.o src/lexer.c                                            
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/ast.o src/ast.c                                                
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/parser.o src/parser.c                                          
src/parser.c: In function ‘parse_fstring’:       
src/parser.c:114:39: warning: unused parameter ‘p’ [-Wunused-parameter]                           
  114 | TNode *parse_fstring(Parser *p, const char *raw, int line) {                  
      |                      ~~~~~~~~^           

gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/value.o src/value.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/gc.o src/gc.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/interpreter.o src/interpreter.c
src/interpreter.c: In function ‘eval_node’:      
src/interpreter.c:1236:36: warning: ‘%s’ directive output may be truncated writing up to 511 bytes into a region of size 501 [-Wformat-truncation=]
 1236 |                "import '%s': %s", path, errbuf);                                          
      |                              ^~         ~~~~~~                                            

src/interpreter.c:1235:13: note: ‘snprintf’ output 12 or more bytes (assuming 523) into a destination of size 512
 1235 |             snprintf(interp->error_msg, sizeof(interp->error_msg),                        
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                        
 1236 |                      "import '%s': %s", path, errbuf);                                    
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                     
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/chunk.o src/chunk.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/compiler.o src/compiler.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/vm.o src/vm.c
gcc -Wall -Wextra -std=c11 -g -Isrc -D_POSIX_C_SOURCE=200809L -DHAVE_X11 -I/usr/include/freetype2 -I/usr/include/libpng16  -c -o src/gui_native.o src/gui_native.c
src/gui_native.c: In function ‘gui_window_create’:
src/gui_native.c:73:76: warning: unused parameter ‘port’ [-Wunused-parameter]                     
   73 | t height, const char *title, int port) { 
      |                              ~~~~^~~~    

src/gui_native.c: At top level:                  
src/gui_native.c:106:17: error: expected ‘)’ before ‘->’ token                                    
  106 |     setsockopt(w->sock_fd, SOL_SOCKET, SO_REUSEADDR, &opt, sizeof(opt));
      |                 ^~                       
      |                 )                        
src/gui_native.c:107:22: error: expected ‘)’ before ‘->’ token                                    
  107 |     set_nonblocking(w->sock_fd);         
      |                      ^~                  
      |                      )                   
src/gui_native.c:110:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token  
  110 |     addr.sin_family      = AF_INET;      
      |         ^                                
src/gui_native.c:111:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token  
  111 |     addr.sin_addr.s_addr = INADDR_ANY;   
      |         ^                                
src/gui_native.c:112:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token  
  112 |     addr.sin_port        = htons((uint16_t)w->port);
      |         ^                                
src/gui_native.c:114:5: error: expected identifier or ‘(’ before ‘if’                             
  114 |     if (bind(w->sock_fd, (struct sockaddr *)&addr, sizeof(addr)) < 0) {
      |     ^~                                   
src/gui_native.c:119:7: error: expected identifier or ‘(’ before ‘else’                           
  119 |     } else {                             
      |       ^~~~                               
src/gui_native.c:123:5: warning: data definition has no type or storage class
  123 |     gui_global_window = w;               
      |     ^~~~~~~~~~~~~~~~~                    
src/gui_native.c:123:5: warning: type defaults to ‘int’ in declaration of ‘gui_global_window’ [-Wimplicit-int]                                     
src/gui_native.c:123:5: error: conflicting types for ‘gui_global_window’; have ‘int’              
src/gui_native.c:19:12: note: previous definition of ‘gui_global_window’ with type ‘GuiWindow *’  
   19 | GuiWindow *gui_global_window = NULL;     
      |            ^~~~~~~~~~~~~~~~~             
src/gui_native.c:123:25: error: ‘w’ undeclared here (not in a function)
  123 |     gui_global_window = w;               
      |                         ^                
src/gui_native.c:124:5: error: expected identifier or ‘(’ before ‘return’                         
  124 |     return w;                            
      |     ^~~~~~                               
src/gui_native.c:125:1: error: expected identifier or ‘(’ before ‘}’ token                        
  125 | }                                        
      | ^                                        
src/gui_native.c: In function ‘gui_window_destroy’:
src/gui_native.c:129:10: error: ‘GuiWindow’ has no member named ‘sock_fd’                         
  129 |     if (w->sock_fd >= 0) close(w->sock_fd);
      |          ^~                              
src/gui_native.c:129:33: error: ‘GuiWindow’ has no member named ‘sock_fd’                         
  129 |  if (w->sock_fd >= 0) close(w->sock_fd); 
      |                              ^~          

src/gui_native.c: In function ‘gui_window_poll’: 
src/gui_native.c:273:16: error: ‘GuiWindow’ has no member named ‘sock_fd’                         
  273 |     if (!w || w->sock_fd < 0) return 0;  
      |                ^~                        
src/gui_native.c:277:23: error: ‘GuiWindow’ has no member named ‘sock_fd’                         
  277 |     int cfd = accept(w->sock_fd, (struct sockaddr *)&cli, &len);
      |                       ^~                 
src/gui_native.c: At top level:                  
src/gui_native.c:66:13: warning: ‘set_nonblocking’ defined but not used [-Wunused-function]       
   66 | static void set_nonblocking(int fd) {    
      |             ^~~~~~~~~~~~~~~              
make: *** [Makefile:57: src/gui_native.o] Error 1
t85491005@penguin:~/prism-lang$ 